--- a/src/Components/Login/SCSS/Login.css
+++ b/src/Components/Login/SCSS/Login.css
@@ -1,1 +1,171 @@
-.container{display:flex;justify-content:center;}.container .card:first-child{width:36%;min-height:100vh;background-color:black;color:#fff;display:flex;justify-content:center;align-items:center;font-size:42px;}@keyframes blink{0%{opacity:1}50%{opacity:0}100%{opacity:1}}.container .card:first-child span{animation:blink 1s infinite;}.container .card:last-child{width:64%;background-color:#F5F5F5;display:flex;justify-content:center;align-items:center;}.container .card:last-child .login-container{white-space:nowrap;width:35%;}.container .card:last-child .login-container .button-group{display:flex;justify-content:space-between;}.container .card:last-child .login-container .button-group button{font-family:"Montserrat";font-style:normal;font-weight:400;font-size:12px;text-align:center;color:#858585;border-radius:12px;border:none;background-color:#fff;padding:6px 14px;display:flex;box-shadow:rgba(0,0,0,.15) 1.95px 1.95px 2.6px;}.container .card:last-child .login-container .button-group button:hover{box-shadow:none;cursor:pointer;transition-duration:.6s;}.container .card:last-child .login-container .button-group button .icon{width:16px;height:17px;margin-right:4px;}.container .card:last-child .login-container form{background-color:#fff;padding:30px;border-radius:12px;margin:20px 0;font-family:"Montserrat";min-width:250px;}.container .card:last-child .login-container form .input-group{margin:14px 0;}.container .card:last-child .login-container form .input-group .label{display:block;margin-bottom:5px;font-family:"Lato";font-weight:400;margin:10px 0;}.container .card:last-child .login-container form .input-group input{display:block;width:96%;padding:6px 8px;font-family:"Lato";font-size:14px;background-color:#EAEAEA;border:none;border-radius:8px;box-shadow:rgba(0,0,0,.08) 0 2px 7px 0 inset;}.container .card:last-child .login-container form p{font-size:14px;font-family:"Lato";font-style:normal;font-weight:400;color:#346BD5;cursor:pointer;}.container .card:last-child .login-container form button{width:97%;background-color:#000;border:none;color:#fff;padding:6px 12px;font-size:16px;font-family:"Montserrat";border-radius:8px;box-shadow:rgba(100,100,111,.2) 0 7px 29px 0;}.container .card:last-child .login-container form button:hover{background-color:#346BD5;color:#fff;cursor:pointer;transition-duration:.6s;box-shadow:rgba(0,0,0,.15) 1.95px 1.95px 2.6px;}.container .card:last-child .login-container .register{text-align:center;font-family:"Lato";font-size:14px;color:#999999;}.container .card:last-child .login-container .register span{color:#346BD5;cursor:pointer;}@media (max-width:768px){.container{flex-direction:column}.container .card:first-child{width:100%;min-height:auto;font-size:32px}.container .card:last-child{width:100%}.container .card:last-child .login-container{width:100%;padding:1% 5%}.container .card:last-child .login-container .button-group{text-align:center;display:flex;justify-content:center}.container .card:last-child .login-container form{min-width:200px}}@media (min-width:769px) and (max-width:1024px){.container .card:last-child{width:80%;padding:2%}.container .card:last-child .login-container{width:60%}.container .card:last-child .login-container form{min-width:250px}}
+.container {
+  display: flex;
+  justify-content: center;
+}
+.container .card:first-child {
+  width: 36%;
+  min-height: 100vh;
+  background-color: #000;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 42px;
+}
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.container .card:first-child span {
+  animation: blink 1s infinite;
+}
+.container .card:last-child {
+  width: 64%;
+  background-color: #F5F5F5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container .card:last-child .login-container {
+  white-space: nowrap;
+  width: 35%;
+}
+.container .card:last-child .login-container .button-group {
+  display: flex;
+  justify-content: space-between;
+}
+.container .card:last-child .login-container .button-group button {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  text-align: center;
+  color: #858585;
+  border-radius: 12px;
+  border: none;
+  background-color: #fff;
+  padding: 6px 14px;
+  display: flex;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+.container .card:last-child .login-container .button-group button:hover {
+  box-shadow: none;
+  cursor: pointer;
+  transition-duration: 0.6s;
+}
+.container .card:last-child .login-container .button-group button .icon {
+  width: 16px;
+  height: 17px;
+  margin-right: 4px;
+}
+.container .card:last-child .login-container form {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 12px;
+  margin: 20px 0px;
+  font-family: "Montserrat";
+  min-width: 250px;
+}
+.container .card:last-child .login-container form .input-group {
+  margin: 14px 0px;
+}
+.container .card:last-child .login-container form .input-group .label {
+  display: block;
+  margin-bottom: 5px;
+  font-family: "Lato";
+  font-weight: 400;
+  margin: 10px 0px;
+}
+.container .card:last-child .login-container form .input-group input {
+  display: block;
+  width: 96%;
+  padding: 6px 8px;
+  font-family: "Lato";
+  font-size: 14px;
+  background-color: #EAEAEA;
+  border: none;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 2px 7px 0px inset;
+}
+.container .card:last-child .login-container form p {
+  font-size: 14px;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  color: #346BD5;
+  cursor: pointer;
+}
+.container .card:last-child .login-container form button {
+  width: 97%;
+  background-color: #000;
+  border: none;
+  color: #fff;
+  padding: 6px 12px;
+  font-size: 16px;
+  font-family: "Montserrat";
+  border-radius: 8px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.container .card:last-child .login-container form button:hover {
+  background-color: #346BD5;
+  color: #fff;
+  cursor: pointer;
+  transition-duration: 0.6s;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+.container .card:last-child .login-container .register {
+  text-align: center;
+  font-family: "Lato";
+  font-size: 14px;
+  color: #999999;
+}
+.container .card:last-child .login-container .register span {
+  color: #346BD5;
+  cursor: pointer;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  .container .card:first-child {
+    width: 100%;
+    min-height: auto;
+    font-size: 32px;
+  }
+  .container .card:last-child {
+    width: 100%;
+  }
+  .container .card:last-child .login-container {
+    width: 100%;
+    padding: 1% 5%;
+  }
+  .container .card:last-child .login-container .button-group {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+  }
+  .container .card:last-child .login-container form {
+    min-width: 200px;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  .container .card:last-child {
+    width: 80%;
+    padding: 2%;
+  }
+  .container .card:last-child .login-container {
+    width: 60%;
+  }
+  .container .card:last-child .login-container form {
+    min-width: 250px;
+  }
+}/*# sourceMappingURL=Login.css.map */
