--- a/src/Components/Login/SCSS/Login.scss
+++ b/src/Components/Login/SCSS/Login.scss
@@ -1,3 +1,16 @@
+// Font Variables
+$font-family-montserrat: 'Montserrat';
+$font-family-lato: 'Lato';
+
+// Color Variables
+$color-black: #000;
+$color-white: #fff;
+$color-highlight: #346BD5;
+$color-secondary: #858585;
+$color-bg: #F5F5F5;
+$color-input-bg: #EAEAEA;
+$color-link: #999999;
+
 .container {
   display: flex;
   justify-content: center;
@@ -5,8 +18,8 @@
   .card:first-child {
     width: 36%;
     min-height: 100vh;
-    background-color: black;
-    color: #fff;
+    background-color: $color-black;
+    color: $color-white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,7 +46,7 @@
 
   .card:last-child {
     width: 64%;
-    background-color: #F5F5F5;
+    background-color: $color-bg;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,15 +60,15 @@
         justify-content: space-between;
 
         button {
-          font-family: 'Montserrat';
+          font-family: $font-family-montserrat;
           font-style: normal;
           font-weight: 400;
           font-size: 12px;
           text-align: center;
-          color: #858585;
+          color: $color-secondary;
           border-radius: 12px;
           border: none;
-          background-color: #fff;
+          background-color: $color-white;
           padding: 6px 14px;
           display: flex;
           box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -75,11 +88,11 @@
       }
 
       form {
-        background-color: #fff;
+        background-color: $color-white;
         padding: 30px;
         border-radius: 12px;
         margin: 20px 0px;
-        font-family: 'Montserrat';
+        font-family: $font-family-montserrat;
         min-width: 250px;
 
         .input-group {
@@ -88,7 +101,7 @@
           .label {
             display: block;
             margin-bottom: 5px;
-            font-family: 'Lato';
+            font-family: $font-family-lato;
             font-weight: 400;
             margin: 10px 0px;
           }
@@ -97,9 +110,9 @@
             display: block;
             width: 96%;
             padding: 6px 8px;
-            font-family: 'Lato';
+            font-family: $font-family-lato;
             font-size: 14px;
-            background-color: #EAEAEA;
+            background-color: $color-input-bg;
             border: none;
             border-radius: 8px;
             box-shadow: rgba(0, 0, 0, 0.08) 0px 2px 7px 0px inset;
@@ -108,27 +121,27 @@
 
         p {
           font-size: 14px;
-          font-family: 'Lato';
+          font-family: $font-family-lato;
           font-style: normal;
           font-weight: 400;
-          color: #346BD5;
+          color: $color-highlight;
           cursor: pointer;
         }
 
         button {
           width: 97%;
-          background-color: #000;
+          background-color: $color-black;
           border: none;
-          color: #fff;
+          color: $color-white;
           padding: 6px 12px;
           font-size: 16px;
-          font-family: 'Montserrat';
+          font-family: $font-family-montserrat;
           border-radius: 8px;
           box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
           &:hover {
-            background-color: #346BD5;
-            color: #fff;
+            background-color: $color-highlight;
+            color: $color-white;
             cursor: pointer;
             transition-duration: 0.6s;
             box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -138,12 +151,12 @@
 
       .register {
         text-align: center;
-        font-family: 'Lato';
+        font-family: $font-family-lato;
         font-size: 14px;
-        color: #999999;
+        color: $color-link;
 
         span {
-          color: #346BD5;
+          color: $color-highlight;
           cursor: pointer;
         }
       }
